kubernetes/doc-home-cluster/infrastructure/security/authentik/redis/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik-redis
  ingress:
    # sonarr
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
